# gengine-rs

./: .cloc.exclude  .gitignore  Cargo.toml  README.md  todo.md
assets/: map_test.json  map_test.toml  sprite.frag  sprite.vert  storage_sprites.json
assets/kenneyrpgpack/: sprites.json  sprites.toml  sprites.txt
lib/gl/: Cargo.toml  build.rs
scripts/: node.wren  registry.wren
src/: asset_manager.rs  big_array.rs  canvas.rs  game_data.rs  gl.rs  input_manager.rs  main.rs  node.rs  path.rs  renderer.rs  resource_tids.rs  shader.rs  sprite.rs  sprite_renderer.rs  storage.rs  texture.rs
src/ecs/: bit_array.rs  comp_storage.rs  mod.rs  world.rs
storage/: shaders.json  sprites.json  textures.json  tilemaps.json
