[package]
name = "gengine"
version = "0.1.0"
authors = ["Phillip Chang <lasagnaphil@snu.ac.kr>"]

[dependencies]
gl = { path = "lib/gl" }
wren = { git = "https://github.com/lasagnaphil/wren-rust" }
lazy_static = "1.0"
libc = "0.2"
cgmath = "0.16.0"
stb_image = "0.2.2"
rand = "0.4"
derivative = "1.0.0"
find_folder = "0.3.0"
serde =  "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"

[dependencies.arrayvec]
version = "0.4.7"
default-features = false
features = ["serde-1"]

[dependencies.sdl2]
version = "0.31.0"
default-features = false
